--- a/frontend/src/components/trustedby/Trustedby.scss
+++ b/frontend/src/components/trustedby/Trustedby.scss
@@ -1,8 +1,8 @@
-.trustedby{
+.trustedBy{
     background-color: #E3FFDA;
     padding-bottom: 28px;
 
-    .container{
+    .trustedBy--container{
         display: flex;
         flex-direction: column;
         padding: 0 60px;
