--- a/frontend/src/components/featured/Featured.scss
+++ b/frontend/src/components/featured/Featured.scss
@@ -9,7 +9,6 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        padding-top: 20px;
 
         .left{
             flex: 2;
@@ -33,21 +32,52 @@
                 font-size: 20px;
                 font-weight: 500;
                 color: #5e6d55;
-                padding-bottom: 30px;
+                padding-bottom: 20px;
                 line-height: 26px;
             }
             button{
                 padding: 10px 28px;
-                border: none;
                 border-radius: 25px;
-                background-color:#53A846;
                 font-size: 16px;
-                color: #fff;
                 cursor: pointer;
                 
+            }
+            .featuredBtn{
+                border: 3px solid #53A846;
+                background-color: transparent;
+                color: #5e6d55;
+                margin-bottom: 30px ;
+                                
                 &:hover {
-                    background-color: #4ac836;
-                }                
+                    background-color: #53a84622;
+                }  
+            }
+            .search{
+                display: flex;
+                
+                input{
+                    width: 360px;
+                    padding: 2px 10px;
+                    border-radius: 5px  0 0 5px;
+                    border: none;
+                    outline: none;
+                    color: #5e6d55;
+                    font-size: 13px;
+
+                    &::placeholder{
+                        color: #5e6d5574;
+                    }
+                }
+                .searchBtn{
+                    border: none;
+                    border-radius: 0 5px 5px 0;
+                    background-color:#53A846;
+                    color: #fff;
+
+                    &:hover {
+                        background-color: #4ac836;
+                    } 
+                }
             }
         }
         .right{
