--- a/frontend/src/components/navbar/Navbar.scss
+++ b/frontend/src/components/navbar/Navbar.scss
@@ -243,7 +243,7 @@
                 font-weight: 600;
             }
 
-            .freelancer {
+            .account--type {
                 font-size: 12px;
             }
         }
