--- a/frontend/src/pages/register/registerClient/Register.scss
+++ b/frontend/src/pages/register/registerClient/Register.scss
@@ -16,6 +16,38 @@
         justify-content: center;
         gap: 10px;
         padding-top: 10px;
+
+        .profile--preview{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            cursor: pointer;
+
+            span{
+                margin-top: 10px;
+                color: #53A846;
+            }
+            .profile--image{
+                width: 100px;
+                height: 100px;
+                border-radius: 50%;
+                outline: 2px solid #4ac836;
+                outline-offset: 4px;
+                object-fit: cover;
+            }
+            .profile--icon{
+                width: 100px;
+                height: 100px;
+                outline: 2px solid #4ac836;
+                border-radius: 50%;
+                color: #605C5C;
+            }
+        }
+        
+        .profile{
+            display: none;
+        }
         .input{
             width: 80%;
             padding: 12px 26px;
