--- a/frontend/src/components/featured/Featured.scss
+++ b/frontend/src/components/featured/Featured.scss
@@ -16,24 +16,51 @@
             flex-direction: column;
             align-items: flex-start;
             justify-content: center;
-            h1{
-                font-family: 'Nosifer', cursive;
-                font-size: 50px;
-                color: #4ac836;
-                line-height: 66px;
-                
-                @media screen and (max-width: '999px') {
-                    font-size: 40px;
-                    line-height: 60px;
+            
+            @media screen and (max-width: '999px') {
+                flex: 1;
+                br{
+                    display: none;
                 }
             }
-            h4{
-                font-family: 'Poppins', sans-serif;
-                font-size: 20px;
-                font-weight: 500;
-                color: #5e6d55;
-                padding-bottom: 20px;
-                line-height: 26px;
+
+            .text{
+                @media screen and (max-width: '999px') {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    width: 100%;
+                }
+                h1{
+                    font-family: 'Nosifer', cursive;
+                    font-size: 50px;
+                    color: #108A00;
+                    line-height: 66px;
+                    
+                    @media screen and (max-width: '999px') {
+                        font-size: 40px;
+                        line-height: 60px;
+                    }
+                    
+                    @media screen and (max-width: '360px') {
+                        font-size: 32px;
+                        line-height: 46px;
+                    }
+                }
+                h4{
+                    font-family: 'Poppins', sans-serif;
+                    font-size: 20px;
+                    font-weight: 500;
+                    color: #5e6d55;
+                    padding-bottom: 20px;
+                    line-height: 26px;
+    
+                    @media screen and (max-width: '360px') {
+                        font-size: 16px;
+                        line-height: 20px;
+                    }
+                }
             }
             button{
                 padding: 10px 28px;
@@ -41,44 +68,55 @@
                 font-size: 16px;
                 cursor: pointer;
                 
+                @media screen and (max-width: '360px') {
+                    padding: 6px 20px;
+                    font-size: 13px;
+                }                
             }
             .featuredBtn{
-                border: 3px solid #53A846;
+                border: 3px solid #108A00;
                 background-color: transparent;
                 color: #5e6d55;
-                margin-bottom: 30px ;
-                                
+                margin-bottom: 30px;
+                
                 &:hover {
                     background-color: #53a84622;
-                }  
+                }
             }
             .search{
                 display: flex;
+                justify-content: start;
+                width: 100%;
                 
+                @media screen and (max-width: '999px') {
+                    justify-content: center;
+                }   
                 input{
-                    width: 360px;
-                    padding: 2px 10px;
+                    width: 100%;
+                    max-width: 480px;
+                    padding: 16px;
                     border-radius: 5px  0 0 5px;
                     border: none;
                     outline: none;
                     color: #5e6d55;
-                    font-size: 13px;
-
+                    font-size: 14px;
+                    
                     &::placeholder{
                         color: #5e6d5574;
-                    }
-                    @media screen and (max-width: '999px') {
-                        width: 260px;
+                        
+                        @media screen and (max-width: '360px') {
+                            font-size: 12px;
+                        }   
                     }
                 }
                 .searchBtn{
                     border: none;
                     border-radius: 0 5px 5px 0;
-                    background-color:#53A846;
+                    background-color:#108A00;
                     color: #fff;
 
                     &:hover {
-                        background-color: #4ac836;
+                        background-color: #14a800;
                     } 
                 }
             }
