--- a/frontend/src/components/slide/SwipeToSlide.scss
+++ b/frontend/src/components/slide/SwipeToSlide.scss
@@ -1,4 +1,39 @@
-.slider{
-  width: 90%;
-  margin: 0 auto;
+.slide--container{
+  padding-top: 60px;
+  .header--text{
+    padding-left: 10px;
+    font-size: 38px;
+    color: #404145;
+  }
+  width: 92%;
+  margin: auto;
+  .cards--container{
+    display: flex !important;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 0;
+  }
+  .cards{
+    width: 280px;
+    height: 345px;
+    border-radius: 4px;
+    padding: 10px;
+    margin: 10px;
+    color: #fff;
+    background-size: cover;
+    p{
+        display: block;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 20px;
+    }
+    h2{
+      font-size: 24px;
+    }
+
+    &:hover{
+      opacity: 0.88;
+      transition: all 0.3s ease-in;
+    }
+  }
 }
