--- a/frontend/src/pages/account/account.scss
+++ b/frontend/src/pages/account/account.scss
@@ -3,9 +3,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    overflow-y: scroll;
-
+    min-height: 100vh;
+    
     .logo{
         padding: 30px 0 20px;
         img{
