--- a/frontend/src/pages/register/registerClient/Register.scss
+++ b/frontend/src/pages/register/registerClient/Register.scss
@@ -4,6 +4,7 @@
     justify-content: center;
     flex-direction: column;
     margin: auto;
+
     h2{
         color: #605C5C;
         font-size: 20px;
@@ -44,7 +45,7 @@
                 color: #605C5C;
             }
         }
-        
+
         .profile{
             display: none;
         }
@@ -116,6 +117,13 @@
             }
         }
     }
+
+    .error{
+        padding-top: 10px;
+        font-size: 12px;
+        color: red;
+    }
+
     .links{
         display: flex;
         align-items: center;
